[package]
name = "Waterfall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
clap = { version = "4.5.59", features = ["derive"] }
curl = "0.4.49"
document-features = "0.2.12"
futures = "0.3.32"
glob = "0.3.3"
iprobe = "0.1.1"
libc = "0.2.169"
log = "0.4.29"
notify = "8.2.0"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.39.1", features = ["serialize"] }
rusdig = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.5.9"
socket2-ext = "0.1.1"
tokio = { version = "1.49.0", features = ["rt", "net", "macros", "rt-multi-thread", "io-util", "time", "sync"] }
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[[bin]]

name = "waterfall"
path = "main.rs"
