[workspace]
resolver = "3"
members = ["wfblmark", "wfacs5ch", "wfcore", "wfcipu", "wfconfig", "wfdesync", "wfdns", "wfsocks", "wftamper"]

[package]
name = "Waterfall"
version = "0.6.8"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
log = "0.4.29"
tokio = { version = "1.49.0", features = ["macros"] }
wfacs5ch = { version = "0.6.8", path = "wfacs5ch" }
wfconfig = { version = "0.6.8", path = "wfconfig" }
wfcore = { version = "0.6.8", path = "./wfcore" }
wfdesync = { version = "0.6.8", path = "wfdesync" }
wfdns = { version = "0.6.8", path = "wfdns" }
wftamper = { version = "0.6.8", path = "wftamper" }
wfsocks = { version = "0.6.8", path = "wfsocks" }
wfcipu = { version = "0.6.8", path = "wfcipu" }
wfblmark = { version = "0.6.8", path = "wfblmark" }

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[[bin]]

name = "waterfall"
path = "main.rs"
