[package]
name = "wfconfig"
version = "0.6.8"
edition = "2021"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[lib]
name = "wfconfig"
path = "main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
log = "0.4.29"
notify = "8.2.0"
quick-xml = { version = "0.39.2", features = ["serialize", "serde-types"] }
serde = { version = "1.0.228", features = ["derive"] }
