[package]
name = "wfconfig"
version = "0.6.8"
edition = "2021"

[lib]
name = "wfconfig"
path = "main.rs"

[dependencies]
futures = "0.3.32"
log = "0.4.29"
notify = "8.2.0"
quick-xml = { version = "0.39.2", features = ["serialize", "serde-types"] }
serde = { version = "1.0.228", features = ["derive"] }
