[package]
name = "wfcore"
version = "0.6.8"
edition = "2021"

[lib]
name = "wfcore"
path = "main.rs"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
glob = "0.3.3"
ipnetwork = "0.21.1"
iprobe = "0.1.1"
log = "0.4.29"
notify = "8.2.0"
quick-xml = "0.39.2"
serde = "1.0.228"
tokio = "1.49.0"
wfblmark = { version = "0.6.8", path = "../wfblmark" }
wfdns = { version = "0.6.8", path = "../wfdns" }
wfcipu = { version = "0.6.8", path = "../wfcipu" }
wfconfig = { version = "0.6.8", path = "../wfconfig" }
ipconfig = "0.3.2"
